# rauthy

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.builder  Dockerfile.debug  Dockerfile.postgres  Dockerfile.postgres.debug  Dockerfile.sqlite  Dockerfile.sqlite.debug  Dockerfile_builder  Dockerfile_builder_gnu  Dockerfile_builder_openssl_manual  Dockerfile_gnu  README.md  api_key_example.json  build_builder.sh  build_local.sh  config-local-test.toml  config-test.toml  config.toml  dev_notes.md  env_vars_migration.md  ephemeral_client_example.json  justfile  rauthy-local_test.cfg  rauthy-test.cfg  rauthy.cfg  rauthy.deploy.cfg  rauthy.test.cfg  result  start_ha_1.sh  start_ha_2.sh  start_ha_3.sh  vault.toml
rauthy-client/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
rauthy-client/examples/actix-web/: Cargo.toml  README.md
rauthy-client/examples/axum/: Cargo.toml  README.md
rauthy-client/examples/device-code/: Cargo.toml  README.md
rauthy-client/examples/generic/: Cargo.toml  README.md
rauthy-client/src/: backchannel_logout.rs  cookie_state.rs  device_code.rs  handler.rs  jwks.rs  lib.rs  oidc_config.rs  principal.rs  provider.rs  rauthy_error.rs  token_set.rs
rauthy-client/src/backchannel_logout/: axum.rs  logout_token.rs  mod.rs
rauthy-client/src/handler/: actix_web.rs  axum.rs  mod.rs
rauthy-client/src/principal/: actix_web.rs  axum.rs  mod.rs
rauthy-client/src/scim/: axum.rs  mod.rs  types.rs
rauthy-client/src/tokens/: claims.rs  jwks.rs  mod.rs  token.rs
rauthy-common/: Cargo.toml
rauthy-common/src/: constants.rs  error_response.rs  ip_blacklist_handler.rs  lib.rs  password_hasher.rs  utils.rs
rauthy-events/: Cargo.toml
rauthy-events/src/: event.rs  lib.rs  listener.rs
rauthy-handlers/: Cargo.toml
rauthy-handlers/src/: api_keys.rs  auth_providers.rs  blacklist.rs  clients.rs  events.rs  fed_cm.rs  generic.rs  groups.rs  lib.rs  oidc.rs  openapi.rs  roles.rs  scopes.rs  sessions.rs  users.rs
rauthy-handlers/src/middleware/: csrf_protection.rs  ip_blacklist.rs  logging.rs  mod.rs  principal.rs  rate_limit.rs  session.rs
rauthy-main/: Cargo.toml
rauthy-main/src/: cache.rs  cache_notify.rs  dummy_data.rs  logging.rs  main.rs  schedulers.rs  tls.rs
rauthy-main/tests/: common.rs  handler_api_keys.rs  handler_auth.rs  handler_generic.rs  handler_groups.rs  handler_pwd_reset.rs  handler_roles.rs  handler_scopes.rs  handler_users.rs  xxx_handler_cust_attrs.rs  yyy_handler_password_policy.rs  zza_handler_cust_attrs.rs  zzb_handler_password_policy.rs  zzc_handler_clients.rs  zzd_handler_clients_dyn.rs  zzz_handler_clients.rs  zzz_ip_blacklist.rs
rauthy-models/: Cargo.toml  askama.toml
rauthy-models/src/: api_cookie.rs  app_state.rs  email.rs  language.rs  lib.rs  request.rs  response.rs  templates.rs
rauthy-models/src/entity/: api_keys.rs  app_version.rs  auth_codes.rs  auth_provider.rs  auth_provider_logo.rs  auth_providers.rs  clients.rs  clients_dyn.rs  colors.rs  continuation_token.rs  db_version.rs  devices.rs  dpop_proof.rs  fed_cm.rs  groups.rs  ip_rate_limit.rs  jwk.rs  jwk_token_validation.rs  logos.rs  magic_links.rs  mfa_app.rs  mfa_auth_code.rs  mod.rs  password.rs  pow.rs  principal.rs  refresh_tokens.rs  refresh_tokens_devices.rs  roles.rs  scopes.rs  sessions.rs  user_attr.rs  users.rs  users_values.rs  webauthn.rs  webids.rs  well_known.rs
rauthy-models/src/events/: event.rs  health_watch.rs  ip_blacklist_handler.rs  listener.rs  mod.rs  notifier.rs
rauthy-models/src/i18n/: account.rs  authorize.rs  device.rs  email_change_confirm.rs  email_change_info_new.rs  email_confirm_change.rs  email_confirm_change_html.rs  email_password_new.rs  email_reset.rs  email_reset_info.rs  error.rs  index.rs  logout.rs  mod.rs  password_reset.rs
rauthy-models/src/mfa/: app_reg_ws.rs  listen_ws.rs  mod.rs
rauthy-models/src/migration/: db_migrate.rs  db_migrate_dev.rs  mod.rs
rauthy-notify/: Cargo.toml
rauthy-notify/src/: lib.rs  matrix.rs  slack.rs
rauthy-service/: Cargo.toml
rauthy-service/src/: aggressive_scan_block.rs  auth.rs  auth_provider.rs  client.rs  encryption.rs  lib.rs  password_reset.rs  token_set.rs
rauthy-service/src/auth_provider/: mod.rs
src/api/: Cargo.toml
src/api/src/: api_keys.rs  atproto.rs  auth_providers.rs  backup.rs  blacklist.rs  clients.rs  cors_preflight.rs  dev_only.rs  email.rs  events.rs  fed_cm.rs  generic.rs  groups.rs  html.rs  i18n.rs  kv.rs  lib.rs  oidc.rs  openapi.rs  pam.rs  roles.rs  scopes.rs  sessions.rs  swagger_ui.rs  theme.rs  themes.rs  tos.rs  users.rs
src/api_types/: Cargo.toml
src/api_types/src/: api_keys.rs  atproto.rs  auth_providers.rs  backup.rs  blacklist.rs  clients.rs  cust_validation.rs  email_jobs.rs  events.rs  fed_cm.rs  forward_auth.rs  generic.rs  groups.rs  kv.rs  lib.rs  oidc.rs  pam.rs  request.rs  response.rs  roles.rs  scopes.rs  sessions.rs  themes.rs  tos.rs  users.rs
src/common/: Cargo.toml  build.rs
src/common/src/: compression.rs  constants.rs  error_response.rs  lib.rs  logging.rs  markdown.rs  params_iter.rs  password_hasher.rs  regex.rs  sanitize_html.rs  utils.rs
src/data/: Cargo.toml
src/data/src/: database.rs  language.rs  lib.rs  rauthy_config.rs  temp_migrations.rs
src/error/: Cargo.toml
src/error/src/: error_impls.rs  lib.rs
src/ipgeo/: Cargo.toml
src/ipgeo/src/: lib.rs  maxmind.rs
src/jwt/: Cargo.toml
src/jwt/src/: claims.rs  lib.rs  token.rs
src/middlewares/: Cargo.toml
src/middlewares/src/: csrf_protection.rs  ip_blacklist.rs  logging.rs  principal.rs
src/models/: Cargo.toml  askama.toml
src/models/src/: api_cookie.rs  app_config.rs  app_state.rs  cache.rs  database.rs  email.rs  hiqlite.rs  html_templates.rs  language.rs  lib.rs  pg_query.rs  rauthy_config.rs  request.rs  response.rs  sqlx_refinery_migration.rs  temp_migrate_federation_idp.rs  temp_migrations.rs  templates.rs  (+1 more)
src/notify/: Cargo.toml
src/schedulers/: Cargo.toml
src/service/: Cargo.toml
src/tls/: Cargo.toml
src/wasm-modules/: Cargo.toml
(+10281 files in other folders)
