[workspace]
resolver = "2"
members = ["src/*"]
exclude = ["rauthy-client"]

[workspace.package]
version = "0.28.0-20250305"
edition = "2021"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[patch.crates-io]
#hiqlite = { git = "https://github.com/sebadob/hiqlite.git", branch = "optimized-migration-checks-in-writer", package = "hiqlite" }
#hiqlite = { path = "../hiqlite/hiqlite", package = "hiqlite" }

[workspace.dependencies]
accept-language = "3"
actix = "0.13"
actix-multipart = "0.7.2"
actix-service = "2"
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-actors = "4"
actix-web-lab = "0.23"
actix-web-prom = "0.9.0"
anyhow = "1"
argon2 = { version = "0.5", features = ["std", "zeroize"] }
async-trait = "0.1.74"
base64 = "0.22.0"
bincode = "1"
brotli = "7.0.0"
cached = "0.54"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
cidr = "0.3.0"
cron = "0.15"
cryptr = { version = "0.5.1", features = ["s3", "streaming"] }
css-color = "0.2"
derive_more = "1"
dotenvy = "0.15"
ed25519-compact = { version = "2.0.4", features = ["ed25519"] }
flume = "0.11"
futures = "0.3"
futures-util = "0.3"
gethostname = "0.5.0"
hex = { version = "0.4", features = ["serde"] }
# sqlx blocks bumping hiqlite to 0.5 because of old lib-sqlite dep
hiqlite = { version = "0.4", features = ["full"] }
hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
image = { version = "0.25.1", default-features = false, features = [
    "rayon", "ico", "jpeg", "png", "tiff", "webp"
] }
itertools = "0.13.0"
jwt-simple = { version = "0.12.6", default-features = false, features = ["pure-rust"] }
lazy_static = "1"
lettre = { version = "0.11", default-features = false, features = [
    "builder", "smtp-transport", "tokio1-rustls-tls", "tracing"
] }
libflate = "2.1.0"
mime = "0.3.17"
mime_guess = "2"
num_cpus = "1"
num-traits = "0.2.19"
once_cell = "1.19.0"
openssl = { version = "0.10.70", features = ["vendored"] }
openssl-sys = { version = "0.9.105", features = ["vendored"] }
oxiri = "0.2.2"
prometheus = "0.13.3"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
regex = "1"
reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
rinja = { version = "0.3.5", features = ["with-actix-web"] }
rinja_actix = "0.3.5"
rio_api = "0.8.4"
rio_turtle = "0.8.4"
rsa = { version = "0.9.3", features = ["serde", "sha2"] }
ruma = { version = "0.12.0", features = ["client-api-c", "client-ext-client-api", "client-reqwest", "markdown", "rand"] }
rust-embed = "8.5.0"
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rustls-pki-types = "1.4.1"
rustls-pemfile = "2.1.2"
semver = { version = "1.0.19", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_path = "0.7.1"
serde_urlencoded = "0.7.1"
serde_with = { version = "3.8.1", features = ["macros"] }
spow = { version = "0.4", features = ["server"] }
sqlx = { version = "0.8.2", features = ["macros", "migrate", "postgres", "runtime-tokio", "sqlite", "tls-rustls", "uuid"] }
strum = { version = "0.26.3", features = ["derive"] }
svg-hush = "0.9.4"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "tracing"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5", features = ["actix_extras", "chrono", "openapi_extensions"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.19.0", features = ["derive"] }
webauthn-rs = { version = "0.5", features = [
    "danger-allow-state-serialisation", "danger-credential-internals"
] }
webauthn-rs-proto = "0.5"
