[workspace]
resolver = "3"
members = ["src/*"]
exclude = ["rauthy-client"]

[workspace.package]
version = "0.34.3-20260203-1"
edition = "2024"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.profiling]
inherits = "release"
codegen-units = 16
debug = true
lto = false
strip = false

[patch.crates-io]
#hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
#hiqlite-macros = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite-macros" }
#hiqlite-wal = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite-wal" }

[workspace.dependencies]
accept-language = "3"
actix = "0.13"
actix-multipart = "0.7.2"
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-lab = "0.24"
actix-web-prom = "0.10"
ammonia = "4.1"
arc-swap = "1.7"
argon2 = { version = "0.5", features = ["std", "zeroize"] }
askama = "0.15"
async-trait = "0.1.74"
atrium-api = "0.25.3"
atrium-common = "0.1.2"
atrium-identity = "0.1.4"
atrium-oauth = "0.1.2"
base64 = "0.22.0"
bincode = { version = "2", features = ["serde"] }
brotli = "8"
bytes = "1.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock", "serde", "std"
] }
chrono-tz = "0.10.4"
cidr = "0.3.0"
constant_time_eq = "0.4.2"
cron = "0.15"
cryptr = { version = "0.9", features = ["s3", "streaming"] }
css-color = "0.2"
deadpool = { version = "0.12", features = ["rt_tokio_1", "serde"] }
deadpool-postgres = "0.14"
dotenvy = "0.15"
ed25519-compact = { version = "2.0.4", features = ["ed25519"] }
flate2 = "1.1"
flume = "0.12"
futures = "0.3"
futures-util = "0.3"
gethostname = "1"
hex = { version = "0.4", features = ["serde"] }
hickory-resolver = "0.25.2"
hiqlite = { version = "0.12.2", features = [
    "cache", "counters", "dashboard", "listen_notify_local", "webpki-roots"
] }
hiqlite-macros = { version = "0.12" }
hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
image = { version = "0.25.1", default-features = false, features = [
    "jpeg", "png", "webp"
] }
itertools = "0.14"
lettre = { version = "0.11", default-features = false, features = [
    "builder", "smtp-transport", "tokio1-rustls-tls", "tracing"
] }
libflate = "2.1.0"
maxminddb = "0.27"
mime = "0.3.17"
mime_guess = "2"
num_cpus = "1"
openssl = { version = "0.10.72", features = ["vendored"] }
openssl-sys = { version = "0.9.105", features = ["vendored"] }
oxiri = "0.2.2"
postgres-types = { version = "0.2.6", features = ["derive"] }
prometheus = "0.14"
pulldown-cmark = "0.13"
rand = "0.9"
rand_core = { version = "0.9", features = ["std"] }
rcgen = "0.14.3"
refinery = { version = "0.9", features = ["tokio-postgres"] }
regex = "1"
# upgrade blocked by ruma-client
reqwest = { version = "0.12.3", default-features = false, features = [
    "json", "rustls-tls"
] }
ring = "0.17.13"
rio_api = "0.8.4"
rio_turtle = "0.8.4"
rsa = { version = "0.9.10", features = ["serde", "sha2"] }
ruma-client = { version = "0.17", features = [
    "client-api", "reqwest-rustls-webpki-roots"
] }
rusqlite = "0.37"
rust-embed = "8.5.0"
rustls = { version = "0.23", default-features = false, features = [
    "logging", "std", "tls12", "ring"
] }
rustls-pki-types = "1.4.1"
s3-simple = "0.7"
semver = { version = "1.0.19", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_path = "0.7.1"
serde_rusqlite = "0.40"
serde_urlencoded = "0.7.1"
spow = { version = "0.6", features = ["server"] }
strum = { version = "0.27", features = ["derive"] }
svg-hush = "0.9.4"
tar = "0.4.44"
tikv-jemallocator = { version = "0.6", features = [
    "unprefixed_malloc_on_supported_platforms"
] }
time = { version = "0.3", features = [
    "formatting", "local-offset", "macros", "parsing", "serde"
] }
tls-hot-reload = "0.2"
toml = "0.9"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter", "json", "tracing"
] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = { version = "0.13", features = [] }
utoipa = { version = "5", features = [
    "actix_extras", "chrono", "openapi_extensions"
] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web", "vendored"] }
validator = { version = "0.20.0", features = ["derive"] }
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
webauthn-rs = { version = "0.5", features = [
    "danger-allow-state-serialisation", "danger-credential-internals"
] }
webauthn-rs-proto = "0.5"
webpki-roots = "1"
