[package]
name = "rauthy-client"
version = "0.13.0"
edition = "2021"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"
rust-version = "1.87.0"
categories = ["web-programming"]
keywords = ["rauthy", "rauthy-client", "oidc"]
description = "Client for the Rauthy OIDC IAM project"
readme = "README.md"
repository = "https://github.com/sebadob/rauthy/tree/main/rauthy-client"

[package.metadata.docs.rs]
features = ["backchannel-logout", "device-code", "scim"]
rustdoc-args = ["--features backchannel-logout,device-code,scim"]

[features]
default = []
actix-web = [
    "dep:actix-web",
    # minimal versions
    "dep:actix-macros",
]
axum = [
    "dep:axum",
    "dep:axum-extra",
]
backchannel-logout = []
device-code = []
qrcode = ["device-code", "dep:qrcode"]
scim = []
userinfo = []

[dependencies]
# common
base64 = "0.22.0"
bincode = { version = "2", default-features = false, features = ["std", "serde"] }
cached = { version = "0.59", features = [] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde", "std"] }
http = "1"
jwt-simple = { version = "0.12.14", default-features = false, features = ["pure-rust"] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
    "brotli", "form", "json", "rustls"
] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.100"
sha2 = "0.11"
thiserror = { version = "2" }
tokio = "1.34"
tracing = "0.1.40"

# actix-web
actix-web = { version = "4.4", optional = true, features = [] }

# axum
axum = { version = "0.8", optional = true, features = [] }
axum-extra = { version = "0.12.2", optional = true, features = ["cookie", "typed-header"] }

# device-code
qrcode = { version = "0.14.0", optional = true }

# make minimal versions happy
actix-macros = { version = "0.2.4", optional = true }
aes = "0.9.0-rc.4"
cipher = "0.5.1"
