[package]
name = "rauthy-client"
version = "0.14.0"
edition = "2024"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"
rust-version = "1.88.0"
categories = ["web-programming"]
keywords = ["rauthy", "rauthy-client", "oidc"]
description = "Client for the Rauthy OIDC IAM project"
readme = "README.md"
repository = "https://github.com/sebadob/rauthy/tree/main/rauthy-client"

[package.metadata.docs.rs]
features = ["backchannel-logout", "device-code", "scim"]
rustdoc-args = ["--features backchannel-logout,device-code,scim"]

[features]
default = []

actix-web = [
    "dep:actix-web",
]
axum = [
    "dep:axum",
    "dep:axum-extra",
    "dep:time",
]
backchannel-logout = []
device-code = []
qrcode = ["device-code", "dep:qrcode"]
rsa = ["dep:rsa"]
scim = []
userinfo = []

[dependencies]
# common
base64 = "0.22.0"
bincode = { version = "2", default-features = false, features = ["std", "serde"] }
cached = { version = "0.59", features = [] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde", "std"] }
ed25519-compact = "2.2"
hmac-sha256 = { version = "1.1.14", features = ["traits010"] }
hmac-sha512 = { version = "1.1.12", features = ["sha384", "traits010"] }
http = "1"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
    "brotli", "form", "json", "rustls"
] }
rsa = { version = "0.9.10", optional = true, features = ["sha2"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.100"
# is bound to `rsa` because of JWT verification
sha2 = "0.10.9"
thiserror = { version = "2" }
tokio = "1.34"
tracing = "0.1.40"

# actix-web
actix-web = { version = "4.4", optional = true, features = [] }

# axum
axum = { version = "0.8", optional = true, features = [] }
axum-extra = { version = "0.12.2", optional = true, features = ["cookie", "typed-header"] }
# necessary to fix a vulnerability
time = { version = "0.3.47", optional = true }

# device-code
qrcode = { version = "0.14.0", optional = true }
