[package]
name = "rauthy-common"
version = "0.13.2"
edition = "2021"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "AGPLv3"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
argon2 = { version = "0.5", features = ["std", "zeroize"] }
base64 = "0.21"
bincode = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
css-color = "0.2"
derive_more = "0.99"
flume = "0.10"
lazy_static = "1"
once_cell = "1"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
redhac = "0.6"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["any", "macros", "migrate", "offline", "postgres", "runtime-tokio-rustls", "sqlite", "tls", "uuid"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
tracing = { version = "0.1", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "3", features = ["actix_extras", "chrono", "openapi_extensions"] }
actix-multipart = "0.6.0"

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
