[package]
name = "rauthy-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
actix-multipart = { workspace = true }
actix-web = { workspace = true }
argon2 = { workspace = true }
base64 = "0.21"
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
css-color = { workspace = true }
derive_more = { workspace = true }
flume = { workspace = true }
gethostname = { workspace = true }
lazy_static = { workspace = true }
once_cell = "1"
rand = { workspace = true }
rand_core = { workspace = true }
redhac = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
