[package]
name = "rauthy-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
flume = { workspace = true }
rauthy-common = { path = "../rauthy-common" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1", features = ["serde", "v7"] }
validator = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
