[package]
name = "rauthy-handlers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
actix = "0.13"
actix-multipart = "0.6.0"
actix-web = { version = "4", features = ["rustls"] }
actix-web-actors = "4"
actix-web-lab = "0.19"
actix-web-validator = "5"
actix-web-grants = "3"
futures = "0.3"
lazy_static = "1"
mime_guess = "2"
num_cpus = "1"
rauthy-common = { path = "../rauthy-common" }
rauthy-models = { path = "../rauthy-models" }
rauthy-service = { path = "../rauthy-service" }
redhac = "0.6"
rust-embed = { version = "6.8", features = ["actix-web", "tokio"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
tracing = { version = "0.1", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "3", features = ["actix_extras", "chrono", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
