[package]
name = "rauthy-handlers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
actix = { workspace = true }
actix-multipart = { workspace = true }
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
actix-web-lab = { workspace = true }
actix-web-validator = "5"
chrono = { workspace = true }
cryptr = { workspace = true }
futures = "0.3"
lazy_static = { workspace = true }
mime_guess = "2"
num_cpus = { workspace = true }
rauthy-common = { path = "../rauthy-common" }
rauthy-models = { path = "../rauthy-models" }
rauthy-service = { path = "../rauthy-service" }
redhac = { workspace = true }
rust-embed = { version = "8", features = ["actix-web", "tokio"] }
semver = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
