[package]
name = "rauthy"
version = "0.13.0"
edition = "2021"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "AGPLv3"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-service = "2"
actix-files = "0.6"
actix-web-grants = "3.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
cron = "0.12"
dotenvy = "0.15"
flume = "0.10"
num_cpus = "1"
rauthy-common = { path = "../rauthy-common" }
rauthy-handlers = { path = "../rauthy-handlers" }
rauthy-models = { path = "../rauthy-models" }
rauthy-service = { path = "../rauthy-service" }
redhac = "0.6"
# actix web currently depends on 0.20
rustls = "0.20"
rustls-pemfile = "1"
serde_json = "1"
sqlx = { version = "0.6", features = ["any", "macros", "migrate", "offline", "postgres", "runtime-tokio-rustls", "sqlite", "tls", "uuid"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "3", features = ["actix_extras", "chrono", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
josekit = "0.8"
pretty_assertions = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.16"
tokio-test = "*"
