[package]
name = "rauthy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
sqlite = []

[dependencies]
actix-web = { workspace = true }
actix-web-prom = "0.7.0"
actix-service = { workspace = true }
actix-web-grants = { workspace = true }
chrono = { workspace = true }
cron = "0.12"
dotenvy = { workspace = true }
flume = { workspace = true }
num_cpus = { workspace = true }
prometheus = "0.13.3"
rauthy-common = { path = "../rauthy-common" }
rauthy-handlers = { path = "../rauthy-handlers" }
rauthy-models = { path = "../rauthy-models" }
rauthy-service = { path = "../rauthy-service" }
redhac = { workspace = true }
rustls = "0.21"
rustls-pemfile = "1"
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
validator = { workspace = true }
webauthn-rs = { workspace = true }

[dev-dependencies]
josekit = "0.8"
pretty_assertions = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
ring = { workspace = true }
tokio-test = "*"
