[package]
name = "rauthy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
sqlite = []

[dependencies]
actix-web = { workspace = true }
actix-web-prom = { workspace = true }
actix-service = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
cryptr = { workspace = true }
dotenvy = { workspace = true }
flume = { workspace = true }
num_cpus = { workspace = true }
prometheus = { workspace = true }
rauthy-common = { path = "../rauthy-common" }
rauthy-handlers = { path = "../rauthy-handlers" }
rauthy-models = { path = "../rauthy-models" }
rauthy-service = { path = "../rauthy-service" }
redhac = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-pemfile = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
spow = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
validator = { workspace = true }
webauthn-rs = { workspace = true }

[dev-dependencies]
ed25519-compact = { workspace = true }
josekit = "0.8"
pretty_assertions = "1"
reqwest = { workspace = true }
ring = { workspace = true }
tokio-test = "*"
