[package]
name = "rauthy-models"
version = "0.13.3"
edition = "2021"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "AGPLv3"

[dependencies]
accept-language = "3"
actix = "0.13"
actix-multipart = "0.6"
actix-web = { version = "4", features = ["rustls"] }
actix-web-actors = "4"
actix-web-lab = "0.19"
actix-service = "2"
anyhow = "1"
argon2 = { version = "0.5", features = ["std", "zeroize"] }
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14"
bincode = "1"
cached = "0.44"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
css-color = "0.2"
derive_more = "0.99"
dotenvy = "0.15"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
jwt-simple = "0.11"
lettre = { version = "0.10", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "tracing"] }
num_cpus = "1"
## Add openssl-sys as a direct dependency so it can be cross compiled to
## x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = { version = "0.9", features = ["vendored"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
rauthy-common = { path = "../rauthy-common" }
redhac = "0.6"
regex = "1"
ring = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["any", "macros", "migrate", "postgres", "runtime-tokio", "sqlite", "tls-rustls", "uuid"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
tracing = { version = "0.1", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "3", features = ["actix_extras", "chrono", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
validator = { version = "0.16", features = ["derive"] }
webauthn-rs = { version = "0.4", features = ["danger-allow-state-serialisation", "danger-credential-internals"] }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
