[package]
name = "rauthy-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# needed to make tests work with the `sqlite` feature which seems to enable some broken doctest in the webauthn-rs crate
doctest = false

[features]
sqlite = []

[dependencies]
accept-language = "3"
actix = { workspace = true }
actix-multipart = { workspace = true }
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
actix-web-lab = { workspace = true }
actix-service = { workspace = true }
anyhow = "1"
argon2 = { workspace = true }
askama = { workspace = true }
askama_actix = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
cached = { workspace = true }
chrono = { workspace = true }
cryptr = { workspace = true }
css-color = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
ed25519-compact = { workspace = true }
flume = { workspace = true }
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
http-serde = { workspace = true }
itertools = { workspace = true }
jwt-simple = { workspace = true }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "tracing"] }
num_cpus = { workspace = true }
## Add openssl-sys as a direct dependency, so it can be cross compiled to
## x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rauthy-common = { path = "../rauthy-common" }
rauthy-notify = { path = "../rauthy-notify" }
redhac = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
rio_api = { workspace = true }
rio_turtle = { workspace = true }
rsa = { version = "0.9.3", features = ["serde", "sha2"] }
rusty-s3 = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = { workspace = true }
spow = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { version = "1", features = ["serde", "v4"] }
validator = { workspace = true }
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.18.2"
tokio-test = "*"
